--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=pruebaTecnica
+
+spring.datasource.url=jdbc:mysql://localhost:3306/prueba_tecnica
+spring.datasource.username=root
+spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
