[ADD]- email service, enviar emails con vistas .html y email basico con solo texto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 logging.level.org.springframework.security=DEBUG
 
+
+#configuracion de java mail sender
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=47e7e898387427
+spring.mail.password=24ed94c8a812d4
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
