--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.application.name=pruebaTecnica
 spring.datasource.url=jdbc:mysql://localhost:3306/prueba_tecnica
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql=true
+#cuando se tiene un ApplicationRunner el update da error
 spring.jpa.hibernate.ddl-auto=create-drop
 
 logging.level.org.springframework.security=DEBUG
